@@ -1,8 +1,7 @@
 [buildout]
 develop = .
 parts = test
-eggs = supervisor
+
 [test]
 recipe = zc.recipe.testrunner
 eggs = collective.recipe.supervisor [tests]
-
